# SLS-TG

./: .gitattributes  CMakeLists.txt  Demo.pdn  README.md  installer.iss  main.cpp  sls_tg.c
.github/workflows/: build.yml
AppDir/: AppRun  sls-tg.desktop
